# hsb_indicator_old

./: .gitignore  Coding_Guidelines.txt  README.md
mold_project_gitlab/: CMakeLists.txt  README.md  version.txt
mold_project_gitlab/ci/: exec_build  exec_create_image  exec_create_update  exec_deploy  exec_update  image_build  probeview.cfg  register_probeview  register_umidus  register_umidus_test  umidus.cfg  umidus_test.cfg  update.txt
mold_project_gitlab/cmake/: mold_version.txt.in  version.cmake  version.cpp.in
mold_project_gitlab/doc/: GSM Modem BG95 via USB  QtCreatorSetup.md  asan.md  at_command_kermit  compile_gcc.md  controller_documentation.md  create-image.md  database_logging.md  dbus.md  fake_sensor_values.md  i18n.md  logging.md  logs.md  low_pass_filter.md  moldstate_sync_dia.md  n_gsm.md  release.md  sequence diagram  serial_over_gpio.md  sprout_calculation.md  testing.md  vpn.md
mold_project_gitlab/enocean_test/: CMakeLists.txt  link_test.cpp  serial_test.cpp
mold_project_gitlab/gsm_confirmation/: CMakeLists.txt  gsm_confirmation.cpp  gsm_confirmation_file.cpp  gsm_confirmation_file.hpp
mold_project_gitlab/gsm_mux/: CMakeLists.txt  at_read_write.cpp  at_read_write.hpp  at_reader.cpp  at_reader.hpp  at_writer.cpp  at_writer.hpp  command_handler.cpp  command_handler.hpp  config.hpp  gsm_mux.cpp  gsm_mux.hpp  gsmmux.h  iccid_reader.cpp  iccid_reader.hpp  online_checker.cpp  online_checker.hpp  options.cpp  options.hpp  pppd_handler.cpp  pppd_handler.hpp  pppd_output_checker.cpp  pppd_output_checker.hpp  provider_handler.cpp  provider_handler.hpp  provider_list.cpp  provider_list.hpp  provider_writer.cpp  provider_writer.hpp  rssi_reader.cpp  rssi_reader.hpp  stats_reader.cpp  stats_reader.hpp  string_print_helper.cpp  string_print_helper.hpp
mold_project_gitlab/hardware_information/: CMakeLists.txt  hardware_test.cpp
mold_project_gitlab/keyboard_test/: CMakeLists.txt  main.cpp  main.qml
mold_project_gitlab/log/: CMakeLists.txt  config.hpp  journal_sink.cpp  journal_sink.hpp  log.cpp  log.hpp  logger.cpp  logger.hpp  pragma.cpp  pragma.hpp  program_options.cpp  program_options.hpp  severity.cpp  severity.hpp
mold_project_gitlab/mold/: .gitignore  CMakeLists.txt  beep_when_not_confirmed_handler.cpp  beep_when_not_confirmed_handler.hpp  boost_serialize_configuration.hpp  boost_serialize_configuration_state.hpp  boost_serialize_mold_settings.hpp  boost_serialize_sprout_value.hpp  building_type.cpp  building_type.hpp  calculation_state.cpp  calculation_state.hpp  comfort_questionnaire.cpp  comfort_questionnaire.hpp  comfort_questionnaire_cache.cpp  comfort_questionnaire_cache.hpp  comfort_questionnaire_handler.cpp  comfort_questionnaire_handler.hpp  configuration.cpp  configuration.hpp  configuration_cache.cpp  configuration_cache.hpp  configuration_handler.cpp  configuration_handler.hpp  configuration_saver.cpp  configuration_saver.hpp  configuration_state.cpp  configuration_state.hpp  configuration_state_handler.cpp  configuration_state_handler.hpp  configuration_values.cpp  configuration_values.hpp  configuration_values_handler.cpp  configuration_values_handler.hpp  configuration_values_outdoor.cpp  configuration_values_outdoor.hpp  controller_handler.cpp  controller_handler.hpp  display_handler.cpp  display_handler.hpp  (+101 more)
mold_project_gitlab/mold_values_test/: CMakeLists.txt  mold_values_test.cpp
mold_project_gitlab/screen_images/: splash.xcf
mold_project_gitlab/scripts/: change_hostname  copy_to_remote.sh  create_update  display_off  display_on  exec-mold  find_rpis  gateway_reset  gateway_update  mold_execute_remote.sh  reboot  tests_execute_remote.sh  touch_calibrate  touch_install  touch_test
mold_project_gitlab/sensors/: CMakeLists.txt  ee895_test.cpp  ee895_test.hpp  scd30_test.cpp  scd30_test.hpp  sensors.cpp  sgpc3_test.cpp  sgpc3_test.hpp  sht25_test.cpp  sht25_test.hpp  sht85_test.cpp  sht85_test.hpp  shtc1_test.cpp  shtc1_test.hpp  tmp117_test.cpp  tmp117_test.hpp
mold_project_gitlab/sht25_test/: CMakeLists.txt
mold_project_gitlab/tests_gtest/: CMakeLists.txt  RoomNameHandler_test.cpp  boost_process_test.cpp  comfort_questionnaire_cache_test.cpp  configuration_cache_test.cpp  configuration_state_handler_test.cpp  controller_cache_test.cpp  controller_handler_test.cpp  controller_ventilation_test.cpp  create_room.hpp  create_shared_with_injector.hpp  data_cache_test.cpp  database_in_memory.cpp  database_in_memory.hpp  enocean_handler_test.cpp  esp3_parser_test.cpp  evaluation_humidity_test.cpp  fixture_controller_ventilation_mock.cpp  fixture_controller_ventilation_mock.hpp  fixture_value_handler_mock.cpp  fixture_value_handler_mock.hpp  initial_room_creator_test.cpp  key_value_cache_test.cpp  low_pass_filter_test.cpp  main.cpp  median_calculator_test.cpp  mold_sprout_sender_test.cpp  nightmode_handler_test.cpp  on_off_control_test.cpp  options_cache_test.cpp  plug_n_play_test.cpp  profile_cache_test.cpp  room_cache_test.cpp  room_handler_test.cpp  sensirion_crc_test.cpp  sensor_id_from_uuid_and_types_test.cpp  sensor_value_getter_test.cpp  sensor_value_handler_test.cpp  sensor_value_offset_test.cpp  svas1_ventilation_test.cpp  (+7 more)
mold_project_gitlab/tone_test/: CMakeLists.txt  tone_test.cpp
mold_project_gitlab/wifi/: CMakeLists.txt  access_point.cpp  access_point.hpp  access_point_getter.cpp  access_point_getter.hpp  active_access_point_getter.cpp  active_access_point_getter.hpp  array_of_string_string.cpp  array_of_string_string.hpp  array_of_string_uint32.cpp  array_of_string_uint32.hpp  array_of_string_variant.cpp  array_of_string_variant.hpp  connection.cpp  connection.hpp  connector.cpp  connector.hpp  connector_test.cpp  dbus_error.cpp  dbus_error.hpp  dbus_helper.cpp  dbus_helper.hpp  device_finder.cpp  device_finder.hpp  device_state.cpp  device_state.hpp  device_state_watcher.cpp  device_state_watcher.hpp  org_desktop_networkmanager.cpp  org_desktop_networkmanager.h  org_desktop_networkmanager_device.cpp  org_desktop_networkmanager_device.h  org_desktop_networkmanager_device_accesspoint.cpp  rescanner.cpp  rescanner.hpp  (+8 more)
(+766 files in other folders)
